fix double scroll

--- a/src/pages/dashboard/Dashboard.scss
+++ b/src/pages/dashboard/Dashboard.scss
@@ -1,9 +1,7 @@
 .dashboard{
   width: 100%;
-  height: 100%;
   padding: 60px 60px 0 60px;
   color: #212121;
-  overflow: auto;
   &__datapicker{
     position: fixed;
     top:100px;
